--- a/shell/Makefile.am
+++ b/shell/Makefile.am
@@ -6,7 +6,7 @@ DEFS += @DEFINE__FILE_DIR__@ $(strip                       	\
 	-DG_LOG_DOMAIN=\"BSESCM\"      	\
 	$(SUIDMAIN_DEFS)                \
 )
-AM_CXXFLAGS  = $(BSESCM_CFLAGS) $(BSE_CFLAGS) $(RAPICORN_CFLAGS) -DRAPICORN_CONVENIENCE -DG_DISABLE_CONST_RETURNS
+AM_CXXFLAGS += $(BSESCM_CFLAGS) $(BSE_CFLAGS) $(RAPICORN_CFLAGS) -DRAPICORN_CONVENIENCE -DG_DISABLE_CONST_RETURNS
 
 #
 # built sources
