--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,8 @@
 # Licensed GNU LGPL v2 or later: http://www.gnu.org/licenses/lgpl.html
 
 # include various m4 macros
-m4_include(acbeast.m4)
+m4_include(acbeast.m4)dnl # include special macros
+m4_include(ld-symbolic.m4)dnl # include special macros
 m4_include(autotools/glib-gettext.m4)
 
 
@@ -95,7 +96,8 @@ AM_MAINTAINER_MODE
 m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
 
 # declare --enable-* args and collect ac_help strings
-AC_ARG_ENABLE(debug,           [  --enable-debug=no/minimum/yes  turn on debugging],,enable_debug=$debug_default)
+AC_ARG_ENABLE(debug,      [  --enable-debug=no/minimum/yes  turn on debugging],,enable_debug=$debug_default)
+AC_ARG_ENABLE(devel-mode, [  --enable-devel-mode=[no/yes]   turn on development mode, default=no],,enable_devel_mode=no)
 AC_ARG_ENABLE(toyprof,         [  --enable-toyprof               turn on toy profiler, see sfi/toyprof.README],,)
 AC_ARG_ENABLE(distcheck-tests, [  --enable-distcheck-tests       turn on resource and time consuming distcheck tests],,enable_distcheck_tests=no)
 AC_SUBST(DOXRULE)
@@ -128,36 +130,150 @@ dnl # Foreign defaults:
 MC_IF_VAR_EQ(enable_static, yes, , enable_static=no)
 MC_IF_VAR_EQ(enable_shared, no, , enable_shared=yes)
 
-# check compilers and their behaviour, setup CFLAGS
-MC_PROG_CC_WITH_CFLAGS
-MC_PROG_CXX_WITH_CXXFLAGS
+# compiler, linker & libtool
+saved_CFLAGS="$CFLAGS"
+AC_PROG_CC
+CFLAGS="$saved_CFLAGS" 		# AC_PROG_CC_G called internally consistently breaks $CFLAGS
+saved_CXXFLAGS="$CFLAGS"
 AC_PROG_CPP
+CXXFLAGS="$saved_CXXFLAGS"	# AC_PROG_CXX_G called internally consistently breaks $CXXFLAGS
 AC_PROG_CXX
 AC_PROG_CXXCPP
+AC_PROG_LD
+AC_LANG_CPLUSPLUS	# use CXX for compilation tests
+AC_LIB_PROG_LD
+AC_LIB_PROG_LD_GNU
+ACX_PROG_LD_GNU_SYMBOLIC
+AC_SUBST([SYMBOLIC_LDFLAGS])
+ACX_PROG_LD_GNU_DYNAMIC_LIST_CPP_NEW
+AC_SUBST([DYNAMIC_LIST_CPP_NEW_LDFLAGS])
+AM_PROG_LIBTOOL
+AC_LIBTOOL_DLOPEN
+
+# AM_LDFLAGS, optimize linker to use faster ELF symbol hashing if we have compiler and linker support
+AC_MSG_CHECKING([whether CC and LD support gnu.hash sections])
+if ${CC-cc} -dumpspecs | grep -q -- '--hash-style=\(both\|gnu\).*--as-needed' && \
+   ${LD-ld} --help     | grep -q -- '--hash-style=.*\(both\|gnu\)' ; then
+  MC_EVAR_ADD(AM_LDFLAGS, [-Wl,--hash-style=both -Wl,--as-needed -Wl,-O1])
+  AC_MSG_RESULT(yes)
+else
+  AC_MSG_RESULT(no)
+fi
+MC_EVAR_ADD(AM_LDFLAGS, -pthread)
+MC_EVAR_ADD(AM_LDFLAGS, -lrt)
+MC_EVAR_ADD(AM_LDFLAGS, -Wl,--no-undefined)
+AC_SUBST(AM_LDFLAGS)
+
+# Pick C++ dialect, needed in CXXFLAGS for compile tests
+MC_CXX_TRY_OPTION(CXXFLAGS,  -std=gnu++0x)
+
+# AM_CFLAGS & AM_CXXFLAGS
+MC_CXX_TRY_OPTION(AM_CXXFLAGS,  -std=gnu++0x)
+BOTHCCXXFLAGS=
+if test "x$enable_debug" = "xyes"; then
+  MC_EVAR_ADD(BOTHCCXXFLAGS,      -DG_ENABLE_DEBUG)
+  MC_CC_TRY_OPTION(BOTHCCXXFLAGS, -g)
+  MC_CC_TRY_OPTION(BOTHCCXXFLAGS, -ggdb3)
+  MC_CC_TRY_OPTION(BOTHCCXXFLAGS, -fno-omit-frame-pointer)
+  MC_CC_TRY_OPTION(BOTHCCXXFLAGS, -fverbose-asm)
+  dnl # MC_CC_TRY_OPTION(BOTHCCXXFLAGS, -Q -ftime-report -fmem-report)
+elif test "x$enable_debug" = "xno"; then
+  MC_EVAR_ADD(BOTHCCXXFLAGS, [-DG_DISABLE_CHECKS -DG_DISABLE_CAST_CHECKS]) # -DG_DISABLE_ASSERT
+else
+  : # minimum debugging
+fi
+MC_CC_TRY_OPTION(BOTHCCXXFLAGS, -fmessage-length=0)
+MC_CC_TRY_OPTION(BOTHCCXXFLAGS, -fdiagnostics-color=auto)
+MC_CC_TRY_OPTION(BOTHCCXXFLAGS, -Wall)
+MC_CC_TRY_OPTION(BOTHCCXXFLAGS, -Wdeprecated)
+MC_CC_TRY_OPTION(AM_CFLAGS,     -Wmissing-prototypes)
+MC_CC_TRY_OPTION(AM_CFLAGS,     -Wno-pointer-sign)
+MC_CC_TRY_OPTION(AM_CFLAGS,     -Wnested-externs)
+MC_CC_TRY_OPTION(AM_CFLAGS,     -fno-cond-mismatch)
+MC_CC_TRY_OPTION(BOTHCCXXFLAGS, -Wmissing-declarations)
+MC_CC_TRY_OPTION(BOTHCCXXFLAGS, -Wpointer-arith)
+MC_CC_TRY_OPTION(BOTHCCXXFLAGS, -Wredundant-decls)
+MC_CC_TRY_OPTION(BOTHCCXXFLAGS, -Werror=format-security)
+MC_CXX_TRY_OPTION(AM_CXXFLAGS,  -Wsign-promo)
+MC_CXX_TRY_OPTION(AM_CXXFLAGS,  -Woverloaded-virtual)
+MC_CC_TRY_OPTION(BOTHCCXXFLAGS, -rdynamic)
+MC_CC_TRY_OPTION(BOTHCCXXFLAGS, -pipe)
+MC_CC_TRY_OPTION(BOTHCCXXFLAGS, -O2)
+MC_CC_TRY_OPTION(BOTHCCXXFLAGS, -ftracer)
+MC_CC_TRY_OPTION(BOTHCCXXFLAGS, -mcx16)
+dnl # MC_CXX_TRY_OPTION(AM_CXXFLAGS,  -Wno-invalid-offsetof)
+MC_EVAR_ADD(AM_CFLAGS,   "$BOTHCCXXFLAGS")
+MC_EVAR_ADD(AM_CXXFLAGS, "$BOTHCCXXFLAGS")
+AC_SUBST(AM_CFLAGS)
+AC_SUBST(AM_CXXFLAGS)
+AC_SUBST(AM_CPPFLAGS)
+
+# == CPU Optimizations ==
+# MMX and SSE instruction sets have been introduced way more than a decade ago:
+# Intel Pentium 3: CMOV MMX SSE (1999)
+# VIA C3 Nehemiah: CMOV MMX SSE (2003)
+# Athlon Palomino: CMOV MMX SSE 3DNow (2001)
+SIMD_FLAGS=
+MC_CC_TRY_OPTION(SIMD_FLAGS, -mmmx)
+MC_CC_TRY_OPTION(SIMD_FLAGS, -msse)
+# Note, -mfpmath=sse can harm FPU-algorithm performance
+# Note, -funroll-loops can harm SSE loop performance
+#MC_CC_TRY_OPTION(SIMD_FLAGS, -funroll-loops)
+#AC_SUBST(SIMD_FLAGS)
+# Expect the target architecture to support MMX/SSE if the compiler does it.
+MC_EVAR_ADD(AM_CFLAGS,   "$SIMD_FLAGS")
+MC_EVAR_ADD(AM_CXXFLAGS, "$SIMD_FLAGS")
+# Newer vectorization instruction sets, should be optionally supported
+# SSE >= 2, AVX
+SSEAVX_FLAGS=
+MC_CC_TRY_OPTION(SSEAVX_FLAGS, -msse2)
+MC_CC_TRY_OPTION(SSEAVX_FLAGS, -msse3)
+MC_CC_TRY_OPTION(SSEAVX_FLAGS, -mssse3)
+MC_CC_TRY_OPTION(SSEAVX_FLAGS, -msse4)
+MC_CC_TRY_OPTION(SSEAVX_FLAGS, -msse4.1)
+MC_CC_TRY_OPTION(SSEAVX_FLAGS, -msse4.2)
+MC_CC_TRY_OPTION(SSEAVX_FLAGS, -msse4a)
+MC_CC_TRY_OPTION(SSEAVX_FLAGS, -mavx)
+MC_CC_TRY_OPTION(SSEAVX_FLAGS, -mavx2)
+AC_SUBST(SSEAVX_FLAGS)
+
+# == OPTIMIZE_FAST ==
+# Some critical code paths should be optimized to run as fast as possible
+OPTIMIZE_FAST=
+MC_CC_TRY_OPTION(OPTIMIZE_FAST, -O3)
+MC_CC_TRY_OPTION(OPTIMIZE_FAST, -ftree-vectorize)
+MC_CC_TRY_OPTION(OPTIMIZE_FAST, -finline-functions)
+MC_CC_TRY_OPTION(OPTIMIZE_FAST, -minline-all-stringops)
+AC_SUBST(OPTIMIZE_FAST)
+
+# == Bse Plugin FLAGS ==
+# * -funroll-loops significantly boosts FPU performance
+# * -mfpmath=sse harms FPU-algorithm performance
+# * -funroll-loops harms SSE loop performance
+MC_CXX_TRY_OPTION(FAST_MATH_FLAGS, -ftree-loop-ivcanon)
+MC_CXX_TRY_OPTION(FAST_MATH_FLAGS, -ftree-loop-linear)
+MC_CXX_TRY_OPTION(FAST_MATH_FLAGS, -ftree-loop-im)
+MC_CXX_TRY_OPTION(FAST_MATH_FLAGS, -ffast-math)
+MC_CXX_TRY_OPTION(FAST_MATH_FLAGS, -fivopts)
+AC_SUBST(FAST_MATH_FLAGS)
+MC_CXX_TRY_OPTION(FPU_FLAGS, -funroll-loops)
+AC_SUBST(FPU_FLAGS)
+SSE_FLAGS="$SIMD_FLAGS"
+AC_SUBST(SSE_FLAGS)
+
+# == SSE Build Conditionals ==
+lacking_mmx_sse=`echo "$SIMD_FLAGS" | grep 'mmx.*sse' -q ; echo $?` # sh truth values: 1 (without sse) or 0 (with sse)
+AM_CONDITIONAL(WITH_SSE_FLAGS, test 0 == $lacking_mmx_sse)
+AC_DEFINE_UNQUOTED(BSE_WITH_SSE_FLAGS, [(0 == $lacking_mmx_sse)], [wether MMX and SSE are supported])
+
+# C & C++ idioms
 AC_C_CONST
 AC_C_INLINE
 AC_HEADER_STDC
 
-# == Compiler Flags ==
-MC_EVAR_ADD(CFLAGS, -Werror=format-security, -Werror=format-security)
-MC_EVAR_ADD(CXXFLAGS, -Werror=format-security, -Werror=format-security)
-MC_EVAR_ADD(CXXFLAGS, -std=gnu++0x, -std=gnu++0x -pthread)
-
 # Checks for programs
 AC_PROG_INSTALL
 AC_PROG_LN_S
-
-# initialize libtool, we need dynamic module support
-AC_LIBTOOL_DLOPEN
-AM_PROG_LIBTOOL
-
-# Check for package requirements.
-MC_IF_VAR_EQ(GCC, yes,,
-    AC_MSG_ERROR(This package requires GNU gcc)
-)
-MC_IF_VAR_EQ(GXX, yes,,
-    AC_MSG_ERROR(This package requires GNU g++)
-)
 
 # require pkg-config
 MC_ASSERT_PROG(PKG_CONFIG, pkg-config, [pkg-config can be found at http://www.freedesktop.org/software/pkgconfig/])
@@ -324,28 +440,10 @@ AC_DEFUN([AC_BSE_REQUIREMENTS],
       AC_MSG_RESULT(no)
     ])
     AC_SUBST(SFI_HAVE_MUTEXATTR_SETTYPE)
-    
+
     dnl # --- math.h glibc extensions
     AC_CHECK_LIB(m, sincos,
       AC_DEFINE(HAVE_SINCOS, 1, [Define if you have the sincos function in <math.h>]))
-
-    # --- setup BSE PLUGIN flags ---
-    MC_PROG_CC_SPECIAL_FLAGS(PLUGIN_FLAGS, -ftree-loop-ivcanon -ftree-loop-linear -ftree-loop-im -fivopts -ffast-math)
-    AC_SUBST(PLUGIN_FLAGS)
-
-    # --- setup BSE FPU flags ---
-    # * -funroll-loops significantly boosts FPU performance
-    MC_PROG_CC_SPECIAL_FLAGS(FPU_FLAGS, -funroll-loops)
-    AC_SUBST(FPU_FLAGS)
-
-    # --- setup BSE SSE flags ---
-    # * -mfpmath=sse harms FPU-algorithm performance
-    # * -funroll-loops harms SSE loop performance
-    MC_PROG_CC_SPECIAL_FLAGS(SSE_FLAGS, -mmmx -msse -ftree-vectorize)
-    AC_SUBST(SSE_FLAGS)
-    not_with_sse_value=`echo "$SSE_FLAGS" | grep 'mmx.*sse' -q ; echo $?` # sh truth value: 1 (without sse) or 0 (with sse)
-    AM_CONDITIONAL(WITH_SSE_FLAGS, test 0 == $not_with_sse_value)
-    AC_DEFINE_UNQUOTED(BSE_WITH_SSE_FLAGS, [(0 == $not_with_sse_value)], [wether SSE_FLAGS are defined])
 
     # --- setup BSE search/install paths ---
     bseplugindir=\${libdir}/bse/v$BIN_VERSION/plugins
@@ -646,13 +744,6 @@ AC_GXK_REQUIREMENTS
 AC_BEAST_REQUIREMENTS
 AC_SUIDMAIN_REQUIREMENTS
 AC_DOC_REQUIREMENTS
-
-# Decide on global --no-undefined linking
-# we only force all libraries and symbols to be present for development builds,
-# except for when building with toyprof which uses the GLIBC symbol _r_debug.
-if test x"$enable_maintainer_mode" = xyes -a x"$enable_toyprof" != xyes ; then
-	MC_EVAR_ADD(LDFLAGS, --no-undefined, -Xlinker --no-undefined)
-fi
 
 # Automake @VARIABLE@ exports.
 AC_SUBST(CFLAGS)
