--- a/bse/zintern/Makefile.am
+++ b/bse/zintern/Makefile.am
@@ -1,7 +1,7 @@
 # BEAST - Better Audio System
 include $(top_srcdir)/Makefile.decl
 
-INCLUDES    += -I$(top_srcdir) -I$(top_builddir)
+AM_CPPFLAGS += -I$(top_srcdir) -I$(top_builddir)
 AM_CXXFLAGS += $(BSE_CFLAGS) -DG_DISABLE_DEPRECATED -DG_DISABLE_CONST_RETURNS
 ZINTERN      = rapicorn-zintern
 
