--- a/launchers/Makefile.am
+++ b/launchers/Makefile.am
@@ -1,7 +1,7 @@
 # launchers - Beast program starters
 include $(top_srcdir)/Makefile.decl
 
-INCLUDES    += -I$(top_srcdir) -I$(top_builddir) -I.
+AM_CPPFLAGS += -I$(top_srcdir) -I$(top_builddir) -I.
 DEFS        += @DEFINE__FILE_DIR__@ -DBINDIR=\"$(bindir)\"
 AM_CXXFLAGS += $(LAUNCHER_CFLAGS) -DG_DISABLE_CONST_RETURNS
 
