--- a/sfi/Makefile.am
+++ b/sfi/Makefile.am
@@ -2,7 +2,7 @@
 include $(top_srcdir)/Makefile.decl
 
 SUBDIRS   = . tests
-INCLUDES    += -I$(top_srcdir) -I$(top_builddir) $(SFI_CFLAGS)
+AM_CPPFLAGS += -I$(top_srcdir) -I$(top_builddir) $(SFI_CFLAGS)
 DEFS        += @DEFINE__FILE_DIR__@ -DG_LOG_DOMAIN=\"SFI\" -DG_DISABLE_CONST_RETURNS
 AM_CXXFLAGS += $(SFI_CFLAGS) $(RAPICORN_CFLAGS) -DRAPICORN_CONVENIENCE
 
