BUILD: rename SFI_CPPFLAGS

--- a/configure.ac
+++ b/configure.ac
@@ -328,9 +328,9 @@ AC_DEFUN([AC_SFI_REQUIREMENTS],
     PKG_CHECK_MODULES(GLIB_GOMT, glib-2.0 >= 2.32.3 gobject-2.0 gmodule-no-export-2.0 gthread-2.0)
     AC_SUBST(GLIB_GOMT_CFLAGS)
     AC_SUBST(GLIB_GOMT_LIBS)
-    SFI_CFLAGS="$GLIB_GOMT_CFLAGS"
+    SFI_CPPFLAGS="$GLIB_GOMT_CFLAGS"
     SFI_LIBS="$GLIB_GOMT_LIBS"
-    AC_SUBST(SFI_CFLAGS)
+    AC_SUBST(SFI_CPPFLAGS)
     AC_SUBST(SFI_LIBS)
 
     AC_CHECK_FUNCS(getpwnam_r getpwnam)
@@ -394,7 +394,7 @@ AC_DEFUN([AC_BSE_REQUIREMENTS],
     fi
 
     dnl # --- complete CFLAGS/LIBS setup ---
-    BSE_CFLAGS="$MAD_CFLAGS $FLAC_CFLAGS $SFI_CFLAGS"
+    BSE_CFLAGS="$MAD_CFLAGS $FLAC_CFLAGS $SFI_CPPFLAGS"
     BSE_LIBS="$OV_LIBS $MAD_LIBS $FLAC_LIBS $SFI_LIBS"
     AC_SUBST(BSE_CFLAGS)
     AC_SUBST(BSE_LIBS)
