--- a/bse/bseconfig.h.in
+++ b/bse/bseconfig.h.in
@@ -10,20 +10,18 @@ extern "C" {
 
 /* BSE version
  */
-#define BSE_MAJOR_VERSION                               (@BSE_MAJOR_VERSION@)
-#define BSE_MINOR_VERSION                               (@BSE_MINOR_VERSION@)
-#define BSE_MICRO_VERSION                               (@BSE_MICRO_VERSION@)
-#define BSE_BINARY_AGE                                  (@BSE_BINARY_AGE@)
-#define BSE_INTERFACE_AGE                               (@BSE_INTERFACE_AGE@)
+#define BST_MAJOR_VERSION                               (@BST_MAJOR_VERSION@)
+#define BST_MINOR_VERSION                               (@BST_MINOR_VERSION@)
+#define BST_MICRO_VERSION                               (@BST_MICRO_VERSION@)
 #define	BSE_GETTEXT_DOMAIN				("@BST_GETTEXT_DOMAIN@")
 
 /* check for header versions
  */
 #define BSE_CHECK_VERSION(major,minor,micro)    \
-    (BSE_MAJOR_VERSION > (major) || \
-     (BSE_MAJOR_VERSION == (major) && BSE_MINOR_VERSION > (minor)) || \
-     (BSE_MAJOR_VERSION == (major) && BSE_MINOR_VERSION == (minor) && \
-      BSE_MICRO_VERSION >= (micro)))
+    (BST_MAJOR_VERSION > (major) || \
+     (BST_MAJOR_VERSION == (major) && BST_MINOR_VERSION > (minor)) || \
+     (BST_MAJOR_VERSION == (major) && BST_MINOR_VERSION == (minor) && \
+      BST_MICRO_VERSION >= (micro)))
 
 
 #ifdef __cplusplus
