--- a/configure.ac
+++ b/configure.ac
@@ -735,7 +735,7 @@ drivers/Makefile
 shell/Makefile
 beast-gtk/Makefile
 beast-gtk/gxk/Makefile
-beast-gtk/dialogs/Makefile
+beast-gtk/res/Makefile
 beast-gtk/icons/Makefile
 launchers/Makefile
 library/Makefile
